--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         height: 90vh;
       }
     </style>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp" />
   </head>
   <body>
     <div id="map"></div>
