allow freestyle tooltip

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>geoFluxus map</title>
     <style>
       #map {
-        width: 90vw;
-        height: 90vh;
+        margin: auto;
+        width: 99vw;
+        height: 98vh;
       }
     </style>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp" />
