add react examples

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>geoFluxus map</title>
     <style>
-      #map {
+      #root {
         margin: auto;
         width: 99vw;
         height: 98vh;
@@ -13,7 +13,8 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp" />
   </head>
   <body>
-    <div id="map"></div>
-    <script src="./index.js"></script>
+    <div id="root"></div>
+    <script src="./examples/index.js"></script>
+<!--    <script src="./react-examples/react.js"></script>-->
   </body>
 </html>
