--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./examples/index.js"></script>
-<!--    <script src="./react-examples/react.js"></script>-->
+<!--    <script src="./examples/index.js"></script>-->
+    <script src="./react-examples/react.js"></script>
   </body>
 </html>
