network map initialization

--- a/index.html
+++ b/index.html
@@ -9,12 +9,26 @@
         width: 99vw;
         height: 98vh;
       }
+
+      #networkmap-legend {
+        position: relative;
+        top: 85vh;
+        width: 25rem;
+        margin: auto;
+        background-color: transparent;
+        color: white;
+      }
     </style>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp" />
   </head>
   <body>
     <div id="root"></div>
-<!--    <script src="./examples/index.js"></script>-->
-    <script src="./react-examples/react.js"></script>
+
+    <!--Map-->
+<!--    <script src="./examples/map.js"></script>-->
+<!--    <script src="./react-examples/map.js"></script>-->
+
+    <!--NetworkMap-->
+    <script src="./examples/networkMap.js"></script>
   </body>
 </html>
