--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
         width: 99vw;
         height: 98vh;
       }
-
-      #networkmap-legend {
-        position: relative;
-        top: 85vh;
-        width: 25rem;
-        margin: auto;
-        background-color: transparent;
-        color: white;
-      }
     </style>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp" />
   </head>
@@ -25,10 +16,10 @@
     <div id="root"></div>
 
     <!--Map-->
-    <script src="./examples/map.js"></script>
+<!--    <script src="./examples/map.js"></script>-->
 <!--    <script src="./react-examples/map.js"></script>-->
 
     <!--NetworkMap-->
-<!--    <script src="./examples/networkMap.js"></script>-->
+    <script src="./examples/networkMap.js"></script>
   </body>
 </html>
