custom reset control

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div id="root"></div>
 
     <!--Map-->
-    <script src="./examples/map.js"></script>
-<!--    <script src="./react-examples/map.js"></script>-->
+<!--    <script src="./examples/map.js"></script>-->
+    <script src="./react-examples/map.js"></script>
 
     <!--NetworkMap-->
 <!--    <script src="./examples/networkMap.js"></script>-->
