--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <!--Map-->
 <!--    <script src="./examples/map.js"></script>-->
-    <script src="./react-examples/map.js"></script>
+<!--    <script src="./react-examples/map.js"></script>-->
 
     <!--NetworkMap-->
-<!--    <script src="./examples/networkMap.js"></script>-->
+    <script src="./examples/networkMap.js"></script>
   </body>
 </html>
