--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div id="root"></div>
 
     <!--Map-->
-    <script src="./examples/map.js"></script>
+<!--    <script src="./examples/map.js"></script>-->
 <!--    <script src="./react-examples/map.js"></script>-->
 
     <!--NetworkMap-->
-<!--    <script src="./examples/networkMap.js"></script>-->
+    <script src="./examples/networkMap.js"></script>
   </body>
 </html>
