--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <!--    <script src="./react-examples/map.js"></script>-->
 
     <!--NetworkMap-->
-    <script src="./examples/networkMap.js"></script>
+<!--    <script src="./examples/networkMap.js"></script>-->
+
+    <!--  FlowMap-->
+    <script src="./examples/flowMap.js"></script>
   </body>
 </html>
