--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="utf-8">
     <title>geoFluxus map</title>
     <style>
-      #root {
+      #root1 {
         margin: auto;
-        width: 99vw;
-        height: 98vh;
+        width: 100%vw;
+        height: 49vh;
+      }
+      #root2 {
+        margin: auto;
+        width: 100%vw;
+        height: 49vh;
       }
     </style>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root1"></div>
+    <div id="root2"></div>
 
     <!--Map-->
 <!--    <script src="./examples/map.js"></script>-->
