custom flowmap tooltip

--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <title>geoFluxus map</title>
     <style>
       #root1 {
-        margin: auto;
-        width: 100%vw;
-        height: 49vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 50%;
+        right: 0;
       }
       #root2 {
-        margin: auto;
-        width: 100%vw;
-        height: 49vh;
+        position: fixed;
+        top: 50%;
+        left: 0;
+        bottom: 0;
+        right: 0;
       }
     </style>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp" />
