--- a/index.html
+++ b/index.html
@@ -4,19 +4,9 @@
     <meta charset="utf-8">
     <title>geoFluxus map</title>
     <style>
-      #root1 {
-        position: fixed;
-        top: 0;
-        left: 0;
-        bottom: 50%;
-        right: 0;
-      }
-      #root2 {
-        position: fixed;
-        top: 50%;
-        left: 0;
-        bottom: 0;
-        right: 0;
+      #root1, #root2 {
+        width: 50vw;
+        height: 49vh;
       }
     </style>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp" />
