--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 
     <!--Map-->
 <!--    <script src="./examples/map.js"></script>-->
-<!--    <script src="./react-examples/map.js"></script>-->
+   <!-- <script src="./react-examples/map.js"></script> -->
 
     <!--NetworkMap-->
-<!--    <script src="./examples/networkMap.js"></script>-->
+    <!-- <script src="./examples/networkMap.js"></script> -->
 
     <!--  FlowMap-->
-    <script src="./examples/flowMap.js"></script>
+    <!-- <script src="./examples/flowMap.js"></script> -->
+    <!-- ChoroplethMap -->
+    <script src="./examples/ChoroplethMap.js"></script>
   </body>
 </html>
