--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>geoFluxus map</title>
     <style>
       #root1, #root2 {
-        width: 99vw;
+        width: 50vw;
         height: 49vh;
       }
     </style>
@@ -26,6 +26,9 @@
     <!-- <script src="./examples/flowMap.js"></script> -->
 
     <!-- ChoroplethMap -->
-    <script src="./examples/ChoroplethMap.js"></script>
+<!--    <script src="./examples/ChoroplethMap.js"></script>-->
+
+    <!--  MapChart-->
+    <script src="./examples/mapChart.js"></script>
   </body>
 </html>
