--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="root2"></div>
 
     <!--Map-->
-<!--    <script src="./examples/map.js"></script>-->
+    <script src="./examples/map.js"></script>
    <!-- <script src="./react-examples/map.js"></script> -->
 
     <!--NetworkMap-->
@@ -29,6 +29,6 @@
 <!--    <script src="./examples/ChoroplethMap.js"></script>-->
 
     <!--  MapChart-->
-    <script src="./examples/mapChart.js"></script>
+<!--    <script src="./examples/mapChart.js"></script>-->
   </body>
 </html>
