--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <div id="root2"></div>
 
     <!--Map-->
-    <script src="./examples/map.js"></script>
+<!--    <script src="./examples/map.js"></script>-->
    <!-- <script src="./react-examples/map.js"></script> -->
 
     <!--NetworkMap-->
     <!-- <script src="./examples/networkMap.js"></script> -->
 
     <!--  FlowMap-->
-    <!-- <script src="./examples/flowMap.js"></script> -->
+     <script src="./examples/flowMap.js"></script>
 
     <!-- ChoroplethMap -->
 <!--    <script src="./examples/ChoroplethMap.js"></script>-->
