--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <title>geoFluxus map</title>
     <style>
       #root1, #root2 {
-        width: 50vw;
-        height: 49vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
       }
     </style>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp" />
   </head>
   <body>
     <div id="root1"></div>
-    <div id="root2"></div>
+<!--    <div id="root2"></div>-->
 
     <!--Map-->
-    <script src="./examples/map.js"></script>
+<!--    <script src="./examples/map.js"></script>-->
    <!-- <script src="./react-examples/map.js"></script> -->
 
     <!--NetworkMap-->
@@ -30,5 +33,8 @@
 
     <!--  MapChart-->
 <!--    <script src="./examples/mapChart.js"></script>-->
+
+    <!-- RouteMap -->
+    <script src="./examples/routeMap.js"></script>
   </body>
 </html>
