select only 2 features

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--    <div id="root2"></div>-->
 
     <!--Map-->
-    <script src="./examples/map.js"></script>
+<!--    <script src="./examples/map.js"></script>-->
    <!-- <script src="./react-examples/map.js"></script> -->
 
     <!--NetworkMap-->
@@ -35,6 +35,6 @@
 <!--    <script src="./examples/mapChart.js"></script>-->
 
     <!-- RouteMap -->
-<!--    <script src="./examples/routeMap.js"></script>-->
+    <script src="./examples/routeMap.js"></script>
   </body>
 </html>
