--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
     <title>geoFluxus map</title>
     <style>
       #root1, #root2 {
-        position: fixed;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
+        float:left;
+        width: 45vw;
+        height: 95vh;
+        margin: 10px;
       }
     </style>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp" />
   </head>
   <body>
     <div id="root1"></div>
-<!--    <div id="root2"></div>-->
+    <div id="root2"></div>
 
     <!--Map-->
 <!--    <script src="./examples/map.js"></script>-->
    <!-- <script src="./react-examples/map.js"></script> -->
 
     <!--NetworkMap-->
-    <!-- <script src="./examples/networkMap.js"></script> -->
+     <script src="./examples/networkMap.js"></script>
 
     <!--  FlowMap-->
 <!--     <script src="./examples/flowMap.js"></script>-->
@@ -35,6 +34,6 @@
 <!--    <script src="./examples/mapChart.js"></script>-->
 
     <!-- RouteMap -->
-    <script src="./examples/routeMap.js"></script>
+<!--    <script src="./examples/routeMap.js"></script>-->
   </body>
 </html>
