--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <div id="root2"></div>
 
     <!--Map-->
-<!--    <script src="./examples/map.js"></script>-->
+    <script src="./examples/map.js"></script>
    <!-- <script src="./react-examples/map.js"></script> -->
 
     <!--NetworkMap-->
-     <script src="./examples/networkMap.js"></script>
+<!--     <script src="./examples/networkMap.js"></script>-->
 
     <!--  FlowMap-->
 <!--     <script src="./examples/flowMap.js"></script>-->
