--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
     <div id="root2"></div>
 
     <!--Map-->
-    <script src="./examples/map.js"></script>
-   <!-- <script src="./react-examples/map.js"></script> -->
+<!--    <script src="./examples/map.js" type="module"></script>-->
+<!--    <script src="./react-examples/map.js" type="module"></script>-->
 
     <!--NetworkMap-->
-<!--     <script src="./examples/networkMap.js"></script>-->
+<!--     <script src="./examples/networkMap.js" type="module"></script>-->
 
     <!--  FlowMap-->
-<!--     <script src="./examples/flowMap.js"></script>-->
+     <script src="./examples/flowMap.js" type="module"></script>
 
     <!-- ChoroplethMap -->
-<!--    <script src="./examples/ChoroplethMap.js"></script>-->
+<!--    <script src="./examples/ChoroplethMap.js" type="module"></script>-->
 
     <!--  MapChart-->
-<!--    <script src="./examples/mapChart.js"></script>-->
+<!--    <script src="./examples/mapChart.js" type="module"></script>-->
 
     <!-- RouteMap -->
-<!--    <script src="./examples/routeMap.js"></script>-->
+<!--    <script src="./examples/routeMap.js" type="module"></script>-->
   </body>
 </html>
