--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!--     <script src="./examples/networkMap.js" type="module"></script>-->
 
     <!--  FlowMap-->
-     <script src="./examples/flowMap.js" type="module"></script>
+     <script src="./examples/flowMap.js"></script>
 
     <!-- ChoroplethMap -->
 <!--    <script src="./examples/ChoroplethMap.js" type="module"></script>-->
